--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,51 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
+        android:layout_height="250dp"
+        app:srcCompat="@drawable/logo_white"
+        android:layout_margin="50dp"/>
+
+    <EditText
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/logo_white" />
+        android:layout_gravity="center"
+        android:layout_marginBottom="30dp"
+        android:backgroundTint="@android:color/white"
+        android:drawableLeft="@drawable/abc_vector_test"
+        android:hint="@string/txv_usuario"
+        android:shadowColor="@android:color/white"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white" />
+
+    <EditText
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="30dp"
+        android:backgroundTint="@android:color/white"
+        android:drawableLeft="@drawable/abc_vector_test"
+        android:hint="@string/txv_senha"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white" />
+
+    <Button
+        android:id="@+id/btnEntrar"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/botao_azul"
+        android:text="@string/btn_entrar"
+        android:textColor="@android:color/white" />
+
+    <Button
+        android:id="@+id/btnCadastrar"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/botao_laranja"
+        android:text="@string/btn_cadastrar"
+        android:textColor="@android:color/white" />
+
 
 </LinearLayout>
