--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="fundo">#282B3A</color>
+    <color name="botaoAzul">#14D2B8</color>
+    <color name="botaoLaranja">#FFB300</color>
 </resources>
