--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
         android:layout_gravity="center"
         android:layout_marginBottom="30dp"
         android:backgroundTint="@android:color/white"
-        android:drawableLeft="@drawable/abc_vector_test"
+        android:drawableLeft="@drawable/user_icon"
+        android:drawablePadding="5dp"
         android:hint="@string/txv_usuario"
         android:shadowColor="@android:color/white"
         android:textColor="@android:color/white"
@@ -34,7 +35,8 @@
         android:layout_gravity="center"
         android:layout_marginBottom="30dp"
         android:backgroundTint="@android:color/white"
-        android:drawableLeft="@drawable/abc_vector_test"
+        android:drawableLeft="@drawable/password_icon"
+        android:drawablePadding="5dp"
         android:hint="@string/txv_senha"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white" />
