--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_gravity="center"
         android:layout_marginBottom="30dp"
         android:backgroundTint="@android:color/white"
-        android:drawableLeft="@drawable/user_icon"
+        android:drawableLeft="@drawable/icone_usuario"
         android:drawablePadding="5dp"
         android:hint="@string/txv_usuario"
         android:shadowColor="@android:color/white"
@@ -35,7 +35,7 @@
         android:layout_gravity="center"
         android:layout_marginBottom="30dp"
         android:backgroundTint="@android:color/white"
-        android:drawableLeft="@drawable/password_icon"
+        android:drawableLeft="@drawable/icone_senha"
         android:drawablePadding="5dp"
         android:hint="@string/txv_senha"
         android:textColor="@android:color/white"
