--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:drawablePadding="5dp"
         android:hint="@string/txv_usuario"
         android:shadowColor="@android:color/white"
+        android:singleLine="true"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white" />
 
@@ -38,8 +39,10 @@
         android:drawableLeft="@drawable/icone_senha"
         android:drawablePadding="5dp"
         android:hint="@string/txv_senha"
+        android:singleLine="true"
         android:textColor="@android:color/white"
-        android:textColorHint="@android:color/white" />
+        android:textColorHint="@android:color/white"
+        android:inputType="textPassword"/>
 
     <Button
         android:id="@+id/btnEntrar"
