Finalizando a tela de cadastro

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_gravity="center"
         android:layout_marginBottom="30dp"
         android:backgroundTint="@android:color/white"
-        android:drawableLeft="@drawable/icone_usuario"
+        android:drawableLeft="@drawable/icone_usuario_branco"
         android:drawablePadding="5dp"
         android:hint="@string/txv_usuario"
         android:shadowColor="@android:color/white"
@@ -36,7 +36,7 @@
         android:layout_gravity="center"
         android:layout_marginBottom="30dp"
         android:backgroundTint="@android:color/white"
-        android:drawableLeft="@drawable/icone_senha"
+        android:drawableLeft="@drawable/icone_senha_branco"
         android:drawablePadding="5dp"
         android:hint="@string/txv_senha"
         android:singleLine="true"
