--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="fundo">#282B3A</color>
     <color name="botaoAzul">#14D2B8</color>
     <color name="botaoLaranja">#FFB300</color>
+    <color name="botaoVermelho">#E32F2F</color>
 </resources>
