Finalizando o layout de Registro de Ponto

--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -36,6 +36,7 @@
         android:textStyle="bold"/>
 
     <Button
+        android:id="@+id/btnRegistroPonto"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
