--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -7,16 +7,16 @@
     android:orientation="vertical"
     tools:context=".CadastroActivity">
 
-    <EditText
+    <TextView
         android:id="@+id/txvCadastro"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="100dp"
         android:background="@color/fundo"
         android:drawableLeft="@drawable/seta"
-        android:editable="false"
         android:fontFamily="@font/montserrat"
-        android:paddingLeft="-10dp"
+        android:textSize="15sp"
+        android:gravity="center_vertical"
         android:text="@string/txv_cadastro"
         android:textColor="@android:color/white"/>
 
