--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -7,15 +7,16 @@
     android:orientation="vertical"
     tools:context=".InicioActivity">
 
-    <EditText
+    <TextView
         android:id="@+id/txvCadastro"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="50dp"
         android:background="@color/fundo"
-        android:editable="false"
         android:fontFamily="@font/montserrat"
+        android:textSize="15sp"
         android:paddingLeft="20dp"
+        android:gravity="center_vertical"
         android:text="@string/txv_inicio"
         android:textColor="@android:color/white"/>
 
