--- a/app/src/main/res/layout/activity_cadastro_cargo.xml
+++ b/app/src/main/res/layout/activity_cadastro_cargo.xml
@@ -7,18 +7,27 @@
     android:orientation="vertical"
     tools:context=".CadastroCargoActivity">
 
-    <TextView
-        android:id="@+id/txvCadastro"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginBottom="200dp"
         android:background="@color/fundo"
-        android:drawableLeft="@drawable/seta"
-        android:fontFamily="@font/montserrat"
-        android:textSize="15sp"
-        android:gravity="center_vertical"
-        android:text="@string/txv_cadastro_cargo"
-        android:textColor="@android:color/white"/>
+        android:layout_marginBottom="200dp">
+        <ImageView
+            android:id="@+id/imgVoltar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/seta"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:fontFamily="@font/montserrat"
+            android:textSize="15sp"
+            android:gravity="center_vertical"
+            android:text="@string/txv_cadastro_cargo"
+            android:textColor="@android:color/white"/>
+    </LinearLayout>
+
+
 
     <EditText
         android:layout_width="350dp"
