--- a/app/src/main/res/layout/lista_consulta_ponto.xml
+++ b/app/src/main/res/layout/lista_consulta_ponto.xml
@@ -1,53 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="25dp">
+    android:layout_height="25dp"
+    android:stretchColumns="*">
 
-    <TableLayout
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:stretchColumns="*">
+        android:layout_weight="1">
 
-        <TableRow
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/primeiraColuna"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:gravity="center"
+            android:textColor="@color/fundo"
+            android:fontFamily="@font/montserrat"
+            android:background="@drawable/borda_lista"
+            android:text="20/09/2020" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textColor="@color/fundo"
-                android:fontFamily="@font/montserrat"
-                android:background="@drawable/borda_lista"
-                android:text="20/09/2020" />
+        <TextView
+            android:id="@+id/segundaColuna"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="@color/fundo"
+            android:fontFamily="@font/montserrat"
+            android:background="@drawable/borda_lista"
+            android:text="09:00" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textColor="@color/fundo"
-                android:fontFamily="@font/montserrat"
-                android:background="@drawable/borda_lista"
-                android:text="09:00" />
+        <TextView
+            android:id="@+id/terceiraColuna"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="@color/fundo"
+            android:fontFamily="@font/montserrat"
+            android:background="@drawable/borda_lista"
+            android:text="19:00" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textColor="@color/fundo"
-                android:fontFamily="@font/montserrat"
-                android:background="@drawable/borda_lista"
-                android:text="19:00" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textColor="@color/fundo"
-                android:fontFamily="@font/montserrat"
-                android:text="01:00" />
-        </TableRow>
-    </TableLayout>
-</LinearLayout>
+        <TextView
+            android:id="@+id/quartaColuna"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="@color/fundo"
+            android:fontFamily="@font/montserrat"
+            android:text="01:00" />
+    </TableRow>
+</TableLayout>
