--- a/app/src/main/res/drawable/borda_cabecalho_lista.xml
+++ b/app/src/main/res/drawable/borda_cabecalho_lista.xml
@@ -5,7 +5,7 @@
             <solid android:color = "@color/fundo"/>
         </shape>
     </item>
-    <item android:right = "2dp">
+    <item android:bottom = "2dp">
         <shape android:shape = "rectangle">
             <solid android:color = "#FFF"/>
         </shape>
