--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_margin="50dp"/>
 
     <EditText
+        android:id="@+id/edtUsuarioLogin"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -30,6 +31,7 @@
         android:textColorHint="@android:color/white" />
 
     <EditText
+        android:id="@+id/edtSenhaLogin"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
