--- a/app/src/main/res/layout/activity_registro_ponto.xml
+++ b/app/src/main/res/layout/activity_registro_ponto.xml
@@ -61,6 +61,7 @@
         android:textColor="@color/fundo"/>
 
     <Button
+        android:id="@+id/btnRegistrar"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
